--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="responsive.css">
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Inter:wght@300;400;700;800&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&family=Poppins:ital,wght@0,200;0,700;1,300;1,400&family=Raleway:ital,wght@0,200;0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Inter:wght@300;400;700;800&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&family=Poppins:wght@100;200;300;400;500;700&family=Raleway:ital,wght@0,200;0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
 	<title>Mentor Website</title>
 </head>
 <body>
        <header>
        	<div class="container">
        		<div class="row">
-       			<div class="col-3 h-name">
+       			<div class="col-2 col-m6 h-name">
                                 <h1><a href="#">MENTOR</a></h1>                  
                             </div>
-       			<div class="col-6 h-menu">
+       			<div class="col-7 h-menu">
                                 <nav>
                                    <ul class="list">
                                           <li><a class="active" href="#" >Home</a></li>
@@ -40,7 +41,7 @@
                                     </ul>
                                 </nav>                  
                             </div>
-       			            <div class="col-3 h-but text-end">
+       			            <div class="col-3 col-m6 h-but text-end">
                                  <div class="but"><a href="#">Get Started</a></div>                  
                             </div>
        		</div>
@@ -60,7 +61,7 @@
        <section class="about">
        	<div class="container">
        	<div class="row">
-       		<div class="col-6">
+       		<div class="col-6 col-m12 col-t12">
                        <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
                        <p class="ital">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                        <ul>
@@ -70,7 +71,7 @@
                        </ul> 
                        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>         
                      </div>
-       		<div class="col-6 ">
+       		<div class="col-6 col-m12 col-t12">
                        <img src="img/about.jpg">          
                      </div>
        	</div>	
@@ -103,28 +104,28 @@
        <section class="why-mentor">
        	<div class="container">
        	<div class="row">
-       		<div class="col-4">
+       		<div class="col-4 col-m12 col-t12">
                          <div class="why">
                             <h5>Why Choose Mentor?</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.</p>
                             <div class="text-align"><a href="#" class="w-btn">Learn More<i class="icon bi-chevron-right"></i></a></div>    
                          </div>            
                      </div>
-       		<div class="col-2 w-content text-align">
+       		<div class="col-2 col-m12 col-t12 w-content text-align">
                          <div>
                             <i class="icon bi-receipt-cutoff"></i>
                             <h5>Corporis voluptates sit</h5> 
                             <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p> 
                          </div>            
                      </div>
-       		<div class="col-2 w-content text-align">
+       		<div class="col-2 col-m12 col-t12 w-content text-align">
                          <div>
                             <i class="icon bi-box"></i>
                             <h5>Ullamco laboris ladore pan</h5> 
                             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p> 
                          </div>            
                      </div>
-       		<div class="col-2 w-content text-align">
+       		<div class="col-2 col-m12 col-t12 w-content text-align">
                          <div>
                             <i class="icon bi-images"></i>
                             <h5>Labore consequatur</h5> 
@@ -138,62 +139,62 @@
        <section class="packegs">
        	<div class="container">
        	<div class="row">
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-store-line"></i><a>Lorem Ipsum</a></div>
                      </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-bar-chart-box-line"></i><a>Dolor Sitema</a></div>
                      </div>
           </div>
-         <div class="col-3">
+         <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-calendar-todo-line"></i><a>Sed perspiciatis</a></div>
                      </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-paint-brush-line"></i><a>Magni Dolores</a></div>
                      </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-database-2-line"></i><a>Nemo Enim</a></div>
                      </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-gradienter-line"></i><a>Eiusmod Tempor</a></div>
                     </div>
          </div>
-         <div class="col-3">
+         <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-file-list-3-line"></i><a>Midela Teren</a></div>
                     </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-price-tag-2-line"></i><a>Pira Neve</a></div>
                     </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-anchor-line"></i><a>Dirada Pack</a></div>
                     </div>
          </div>
-       	 <div class="col-3">
+       	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-disc-line"></i><a>Moton Ideal</a></div>
                     </div>
          </div>
-		 <div class="col-3">
+		 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-base-station-line"></i><a>Verdo Park</a></div>
                     </div>
          </div>   
-           	 <div class="col-3">
+           	 <div class="col-3 col-m6 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-fingerprint-line"></i><a>Flavor Nivelanda</a></div>
              </div>
@@ -209,7 +210,7 @@
                            <h6>POPULAR COURSES</h6> 
                      </div>
        	<div class="row">
-       	 <div class="col-4">
+       	 <div class="col-4 col-m12 col-t6">
                <div class="c-bg1"></div>
                    <div class="row flex">
                        <h2>Web Development</h2>
@@ -225,7 +226,7 @@
                         <div class="right"><i class="bi-person"></i>50<i class="bi-heart"></i>65</div>
                     </div>
                </div>
-       	 <div class="col-4">
+       	 <div class="col-4 col-m12 col-t6">
                <div class="c-bg2"></div>
                    <div class="row flex">
                        <h2>Marketing</h2>
@@ -241,7 +242,7 @@
                         <div class="right"><i class="bi-person"></i>45<i class="bi-heart"></i>70</div>
                     </div>       
                </div>
-       	 <div class="col-4">
+       	 <div class="col-4 col-m12 col-t6">
                 <div class="c-bg3"></div>
                    <div class="row flex">
                        <h2>Content</h2>
@@ -264,7 +265,7 @@
        <section class="trainers text-align">
        	<div class="container">
        	<div class="row">
-       	 <div class="col-3">
+       	 <div class="col-4 col-m12 col-t6">
                 <div class="t-bg1"></div>
                 <h1>Walter White</h1><br>
                 <span>Web Development</span>
@@ -275,7 +276,7 @@
                          <a href="#"><i class="icon bi-instagram"></i></a>
                   </div>      
                </div>
-       	 <div class="col-3">
+       	 <div class="col-4 col-m12 col-t6">
                 <div class="t-bg2"></div>
                 <h1>Sarah Jhinson</h1><br>
                 <span>Marketing</span>
@@ -286,7 +287,7 @@
                          <a href="#"><i class="icon bi-instagram"></i></a>
                   </div>      
                </div>
-       	 <div class="col-3">
+       	 <div class="col-4 col-m12 col-t6">
                 <div class="t-bg3"></div>
                 <h1>William Anderson</h1><br>
                 <span>Content</span>
@@ -304,7 +305,7 @@
        <section class="contact">
        	<div class="container">
        	<div class="row">
-       	 <div class="col-3">
+       	 <div class="col-3 col-m12 col-t4">
                  <div class="mentor">
                      <h2>Mentor</h2>
                      <p>A108 Adam Street<br> New York, NY 535022 <br> United States</p>
@@ -312,7 +313,7 @@
                      <p><span>Email: </span> info@example.com</p>
                  </div>     
                </div>
-       	 <div class="col-2">
+       	 <div class="col-2 col-m6 col-t4">
                      <h3>Useful Links</h3>
                  <div class="row flex">
                      <i class="bi bi-chevron-right"><a href="#">Home</a></i><br>
@@ -322,7 +323,7 @@
                      <i class="bi bi-chevron-right"><a href="#">Privacy policy</a></i>
                  </div>     
                </div>
-       	 <div class="col-3">                
+       	 <div class="col-3 col-m6 col-t4">                
                      <h3>Our Services</h3>
                  <div class="row flex">
                      <i class="bi bi-chevron-right"><a href="#">Web Design</a></i><br>
@@ -332,11 +333,11 @@
                      <i class="bi bi-chevron-right"><a href="#">Graphic Design</a></i>   
                  </div>     
                </div>
-       	 <div class="col-4">
+       	 <div class="col-4 col-m12 col-t12">
                  <div class="Subscribe">
                     <h3>Join Our Newsletter</h3>
                     <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-                    <input type="text" name=""><a href="#"><button>Subscribe</button></a>    
+                    <input type="text" name=""><a href="#" class="button">Subcribe</a>
                  </div>     
                </div>
        	</div>	
@@ -346,11 +347,11 @@
        <footer>
        	<div class="container">
        	 <div class="row">
-       		<div class="col-6">
+       		<div class="col-6 col-m12">
                         <p>© Copyright<span>Mentor</span>. All Rights Reserved</p>
-                        <p>Designed by  <a href="#">Thalapathyrahul</a></p>
+                        <p>Designed by  <a href="#">Asthetic@Syko</a></p>
                      </div>
-       		<div class="col-6">
+       		<div class="col-6 col-m12">
                        <div class="row">
                               <i class="bi bi-twitter"></i>
                               <i class="bi bi-facebook"></i>
