--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="responsive.css">
+
        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,12 +24,12 @@
        			<div class="col-8 h-menu">
                                 <nav>
                                    <ul class="list">
-                                          <li><a class="active" href="#" >Home</a></li>
-                                          <li><a  href="#" >About</a></li>
-                                          <li><a  href="#" >Courses</a></li>
-                                          <li><a  href="#" >Trainers</a></li>
-                                          <li><a  href="#" >Events</a></li>
-                                          <li><a  href="#" >Pricing</a></li>
+                                          <li><a class="active" href="#home" >Home</a></li>
+                                          <li><a  href="#about" >About</a></li>
+                                          <li><a  href="#courses" >Courses</a></li>
+                                          <li><a  href="#trainers" >Trainers</a></li>
+                                          <li><a  href="#events" >Events</a></li>
+                                          <li><a  href="#pricing" >Pricing</a></li>
                                           <li class="drop-down"><a  href="#" >Drop Down <i class="bi bi-chevron-down"></i></a>
                                            <ul>
                                              <li><a href="#">Drop Down 1</a></li>
@@ -44,7 +46,7 @@
                                              <li><a href="#">Drop Down 4</a></li>
                                            </ul>
                                           </li>
-                                          <li><a class="list-ani " href="#" >Contact</a></li>
+                                          <li><a class="list-ani " href="#contact" >Contact</a></li>
                                     </ul>
                                 </nav>                  
                             </div>
@@ -55,7 +57,7 @@
        	</div>
        </header>
 
-       <section class="home">
+       <section id="home" class="home">
        	<div class="container">
        	  <div class="h-content">
                    <h2>Learning Today,<br>Leading Tomorrow</h2>
@@ -65,7 +67,7 @@
        	</div>
        </section> 
 
-       <section class="about">
+       <section id="about" class="about">
        	<div class="container">
        	<div class="row">
        		<div class="col-6 col-m12 col-t12">
@@ -88,19 +90,19 @@
        <section class="counter">
        	<div class="container text-align">
        	<div class="row">
-       		<div class="col-3">
+       		<div class="col-m12 col-3">
                         <h4>1232</h4>
                         <p>Students</p>            
                      </div>
-       		<div class="col-3">
+       		<div class="col-m12 col-3">
                         <h4>64</h4>
                         <p>Courses</p>            
                      </div>
-       		<div class="col-3">
+       		<div class="col-m12 col-3">
                         <h4>45</h4>
                         <p>Events</p>            
                      </div>
-       		<div class="col-3">
+       		<div class="col-m12 col-3">
                         <h4>78</h4>
                         <p>Trainers</p>            
                      </div>
@@ -146,71 +148,71 @@
        <section class="packegs">
        	<div class="container">
        	<div class="row">
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-store-line"></i><a>Lorem Ipsum</a></div>
                      </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-bar-chart-box-line"></i><a>Dolor Sitema</a></div>
                      </div>
           </div>
-         <div class="col-3 col-m6 col-t4">
+         <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-calendar-todo-line"></i><a>Sed perspiciatis</a></div>
                      </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-paint-brush-line"></i><a>Magni Dolores</a></div>
                      </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-database-2-line"></i><a>Nemo Enim</a></div>
                      </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-gradienter-line"></i><a>Eiusmod Tempor</a></div>
                     </div>
          </div>
-         <div class="col-3 col-m6 col-t4">
+         <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-file-list-3-line"></i><a>Midela Teren</a></div>
                     </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-price-tag-2-line"></i><a>Pira Neve</a></div>
                     </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-anchor-line"></i><a>Dirada Pack</a></div>
                     </div>
          </div>
-       	 <div class="col-3 col-m6 col-t4">
+       	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-disc-line"></i><a>Moton Ideal</a></div>
                     </div>
          </div>
-		 <div class="col-3 col-m6 col-t4">
+		 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-base-station-line"></i><a>Verdo Park</a></div>
                     </div>
          </div>   
-           	 <div class="col-3 col-m6 col-t4">
+           	 <div class="col-3 col-m12 col-t4">
                      <div class="border">
                         <div class="row"><i class="ri-fingerprint-line"></i><a>Flavor Nivelanda</a></div>
              </div>
          </div>
        	</div>	
        	</div>
-       </section> 
+       </section>  
 
-       <section class="courses">
+       <section id="courses" class="courses">
        	<div class="container">
                      <div class="header">
                            <span>COURSES</span>
@@ -269,7 +271,7 @@
        	</div>
        </section>
 
-       <section class="trainers text-align">
+       <section id="trainers" class="trainers text-align">
        	<div class="container">
        	<div class="row">
        	 <div class="col-4 col-m12 col-t6">
@@ -309,7 +311,7 @@
        	</div>
        </section>
 
-       <section class="contact">
+       <section id="contact" class="contact">
        	<div class="container">
        	<div class="row">
        	 <div class="col-3 col-m12 col-t4">
@@ -344,7 +346,9 @@
                  <div class="Subscribe">
                     <h3>Join Our Newsletter</h3>
                     <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                   <form>
                     <input type="text" name=""><a href="#" class="button">Subcribe</a>
+                   </form>  
                  </div>     
                </div>
        	</div>	
